[metadata]
name = redis-limpyd
version = 2.1.2.dev0
author = Yohan Boniface
author_email = yb@enix.org
maintainer = Stephane "Twidi" Angel
maintainer_email = s.angel@twidi.com
url = https://github.com/limpyd/redis-limpyd
description = Limpyd provides an easy way to store objects in Redis, without losing the power and the control of the Redis API, in a limpid way, with just as abstraction as needed.
long_description = file: README.rst
license = WTFPL
license_file = LICENSE
keywords = redis, orm
platform=any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = True
packages = find:
install_requires =
    redis>=3
    future
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*

[options.packages.find]
include =
    limpyd
    limpyd.*

[options.extras_require]
doc =
    Sphinx
    sphinx-rtd-theme
test =
    six

[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = doc/
build-dir = doc/_build
all_files = 1

[upload_docs]
upload-dir = doc/_build/html
